# contangle-zkcp

./: .gitignore  .gitmodules  Cargo.toml  README.md
adaptor/: Cargo.toml
adaptor/src/: main.rs
circom/: Makefile  dummy.circom  package-lock.json  package.json
circom/test/: circuits.test.ts
circuits/: Cargo.toml
circuits-ark/: Cargo.toml
circuits-ark/src/: encryption.rs  lib.rs  parameters.rs  poseidon.rs  utils.rs
circuits-halo2/: Cargo.toml
circuits-halo2/src/: add_chip.rs  constants.rs  encryption.rs  encryption_aggr.rs  lib.rs
circuits/src/: circom.rs  circom_wrapper.rs  encryption.rs  lib.rs  poseidon.rs  property_verifier.rs  sample_entries.rs  utils.rs
cmd/: Cargo.toml
cmd/src/: args.rs  main.rs  mods.rs
docs/: protocol.md
lib/: Cargo.toml
lib/src/: buyer.rs  cipher_host.rs  config.rs  ethereum.rs  lib.rs  seller.rs  traits.rs  utils.rs  wallet.rs  zk_property.rs  zkp.rs
lib/src/zk/: encryption.rs  mod.rs  property.rs  property2.rs  sample_entries.rs  traits.rs  verifiable_encryption.rs
server/: Cargo.toml
server/src/: client.rs  lib.rs
src/: buyer.rs  main.rs  traits.rs  utils.rs
zkp/: Cargo.toml
zkp/src/: encryption.rs  lib.rs  parameters.rs  poseidon.rs  utils.rs
zkp/src/elgamal/: constraints.rs  mod.rs  poseidon.rs
