[package]
name = "scriptless-zkcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
rand = "0.8.5"
futures = "0.3.21"
sha2 = { version = "0.9"}
sha3 = { version = "0.9"}
ecies = "0.2.2"
rand_chacha = "0.3.1"
crypto = { version = "0.3.0", features = ["aead", "elliptic-curve", "cipher", "std", "digest"]}
secp256kfun = { version = "0.7.1", features = ["secp256k1"] }
ecdsa_fun = { version = "0.7.1", features = ["adaptor"] }
byte-slice-cast = "1.2.1"

ethers = { version = "0.6.0", features = ["ws"]}
k256 = { version = "0.9.6", features = ["ecdsa-core"]}
url = "2.2.2"

tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
