[package]
name = "cmd"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
rand = "0.8.5"
anyhow = "1.0.56"
gumdrop = "0.8"
futures = { version = "0.3.2", features = ["compat"] }
futures-util = "0.3"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
async-std = { version = "1.10.0", features = ["attributes", "tokio1"] }
async-trait = "0.1"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1"
pretty_env_logger = "0.4.0"
url = "2.2.2"
rocket = "0.5.0-rc.2"
inquire = { version = "0.2.1" }
chrono = "0.4.19"
num-bigint = "0.4.3"

scriptless-zkcp = { path = "../lib" }
server = { path = "../server" }
circuits = { path = "../circuits" }
