[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
anyhow = "1.0.56"
gumdrop = "0.8"
futures = { version = "0.3.2", features = ["compat"] }
futures-util = "0.3"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
async-std = { version = "1.10.0", features = ["attributes", "tokio1"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rocket = { version = "0.5.0-rc.2", features = ["json"] }

ethers = "0.14.0"
secp256kfun = { version = "0.7.1", features = ["secp256k1"] }
ecdsa_fun = { version = "0.7.1", features = ["adaptor", "serde"] }
scriptless-zkcp = {path = "../lib"}
hex = "0.4.3"

surf = "2.3.2"
