[package]
name = "zkp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-snark = { version = "^0.3.0", default-features = false }
ark-r1cs-std = { version = "^0.3.0", default-features = false }
ark-nonnative-field = { version = "0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false }
ark-groth16 = { version = "^0.3.0", features = ["r1cs", "std"] }
ark-sponge = { version = "^0.3.0" , features = ["r1cs"] }
ark-crypto-primitives = { version = "^0.3.0", features = ["r1cs"] }
ark-serialize = { version = "^0.3.0", default-features = false }
ark-ed-on-bls12-381 = { version = "^0.3.0", default-features = false, features = [ "r1cs" ] }
ark-bls12-381 = { version = "^0.3.0" }
ark-bls12-377 = { version = "^0.3.0", features = ["r1cs","curve"] }
ark-bw6-761 = { version = "^0.3.0" }

pretty_env_logger = "0.4.0"

json = "0.12.4"
lazy_static = "^1.4.0"
serde_json = "1.0.82"
hex = "0.4.3"
